<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#DEC8F2"
    android:padding="30dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/cambio_de_moneda"
        android:textColor="#462588"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <RadioGroup
        android:id="@+id/rgCambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbtPtasEuros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:text="@string/pts_to_euros"/>
        <RadioButton
            android:id="@+id/rbtEurosPtas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euros_to_pts"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_value"/>
        <EditText
            android:id="@+id/etValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_value"
            android:inputType="numberDecimal"
            android:textSize="14sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnCambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/btn_exchange_text"/>


</LinearLayout>